cfn_benchmark/cfn_templates/INTENTIUS__chant/examples/cc-aws-canonical/template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Outputs": {
    "PrivateSubnetId": {
      "Value": {
        "Fn::GetAtt": [
          "privateSubnet",
          "SubnetId"
        ]
      }
    },
    "VpcId": {
      "Value": {
        "Fn::GetAtt": [
          "vpc",
          "VpcId"
        ]
      }
    }
  },
  "Resources": {
    "appInstance": {
      "Properties": {
        "ImageId": "ami-0c02fb55956c7d316",
        "InstanceType": "t3.micro",
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "appSecurityGroup",
              "GroupId"
            ]
          }
        ],
        "SubnetId": {
          "Fn::GetAtt": [
            "privateSubnet",
            "SubnetId"
          ]
        }
      },
      "Type": "AWS::EC2::Instance"
    },
    "appSecurityGroup": {
      "Properties": {
        "GroupDescription": "cc-app in-VPC access to the app instance",
        "SecurityGroupIngress": [
          {
            "CidrIp": "10.42.0.0/16",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "vpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "igw": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "igwAttachment": {
      "Properties": {
        "InternetGatewayId": {
          "Fn::GetAtt": [
            "igw",
            "InternetGatewayId"
          ]
        },
        "VpcId": {
          "Fn::GetAtt": [
            "vpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::VPCGatewayAttachment"
    },
    "privateSubnet": {
      "Properties": {
        "CidrBlock": "10.42.128.0/24",
        "VpcId": {
          "Fn::GetAtt": [
            "vpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "publicRoute": {
      "DependsOn": "igwAttachment",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Fn::GetAtt": [
            "igw",
            "InternetGatewayId"
          ]
        },
        "RouteTableId": {
          "Fn::GetAtt": [
            "publicRouteTable",
            "RouteTableId"
          ]
        }
      },
      "Type": "AWS::EC2::Route"
    },
    "publicRouteTable": {
      "Properties": {
        "VpcId": {
          "Fn::GetAtt": [
            "vpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "publicRta": {
      "Properties": {
        "RouteTableId": {
          "Fn::GetAtt": [
            "publicRouteTable",
            "RouteTableId"
          ]
        },
        "SubnetId": {
          "Fn::GetAtt": [
            "publicSubnet",
            "SubnetId"
          ]
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "publicSubnet": {
      "Properties": {
        "CidrBlock": "10.42.0.0/24",
        "MapPublicIpOnLaunch": true,
        "VpcId": {
          "Fn::GetAtt": [
            "vpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "vpc": {
      "Properties": {
        "CidrBlock": "10.42.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true
      },
      "Type": "AWS::EC2::VPC"
    }
  }
}
